Add hamburger menu button markup in navigation

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
             >
           </li>
         </ul>
+
+        <!-- Hamburger button -->
+        <button class="btn--mobile-nav" aria-label="Toggle navigation">
+          <span class="icon">&nbsp;</span>
+          <span class="icon">&nbsp;</span>
+          <span class="icon">&nbsp;</span>
+        </button>
       </nav>
 
       <div class="header__title">
