Enhance <head> with SEO and social media meta tags

--- a/index.html
+++ b/index.html
@@ -1,18 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Charset & Viewport -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="img/icon.png" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+    <!-- SEO Meta Tags -->
+    <title>Bankist | Modern Digital Banking Experience</title>
+    <meta
+      name="description"
+      content="Bankist is a sleek and responsive landing page for a modern digital bank. Built with clean HTML, CSS, and JavaScript, it showcases interactive features, smooth animations, and a minimalist design."
+    />
+    <meta
+      name="keywords"
+      content="Bankist, digital bank, banking website, landing page, HTML, CSS, JavaScript, responsive design, frontend project"
+    />
+    <meta name="author" content="Tochukwu Okike" />
+
+    <!-- Social Media / Open Graph -->
+    <meta
+      property="og:title"
+      content="Bankist | Modern Digital Banking Experience"
+    />
+    <meta
+      property="og:description"
+      content="A professional banking website landing page built with modern frontend development practices."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://minimalist-banking-site.vercel.app/"
+    />
+    <meta
+      property="og:image"
+      content="https://minimalist-banking-site.vercel.app/img/preview.png"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Bankist | Modern Digital Banking Experience"
+    />
+    <meta
+      name="twitter:description"
+      content="A sleek and interactive landing page for a digital bank, showcasing responsive frontend design."
+    />
+    <meta
+      name="twitter:image"
+      content="https://minimalist-banking-site.vercel.app/img/preview.png"
+    />
+
+    <!-- Favicon & Fonts -->
+    <link rel="icon" type="image/png" href="img/icon.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>Bankist | When Banking meets Minimalist</title>
 
+    <!-- Styles & Scripts -->
+    <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
   <body>
