updated links after deployment

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://minimalist-banking-site.vercel.app/"
+      content="https://minimalist-banking-site.netlify.app/"
     />
     <meta
       property="og:image"
-      content="https://minimalist-banking-site.vercel.app/img/preview.png"
+      content="https://minimalist-banking-site.netlify.app/img/preview.png"
     />
 
     <!-- Twitter Card -->
@@ -49,7 +49,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://minimalist-banking-site.vercel.app/img/preview.png"
+      content="https://minimalist-banking-site.netlify.app/img/preview.png"
     />
 
     <!-- Favicon & Fonts -->
